<resources>
    <string name="app_name">HewanKita</string>
    <string name="outlet">Outlet</string>
    <string name="bookingDate">Booking Date</string>
    <string name="bookingTime">Booking Time</string>
    <string name="click">Please double click</string>
    <string name="search">Search</string>
    <string name="address">Address</string>
    <string name="checkIn">Check In</string>
    <string name="checkOut">Check Out</string>
    <string name="timeOfArrival">Time Of Arrival</string>
    <string name="next">Next</string>
    <string name="animalDoctor">Animal Doctor</string>
    <string name="custody">Custody</string>
    <string name="grooming">Grooming</string>
    <string name="vaccination">Vaccination</string>
    <string name="email">Email</string>
    <string name="email_validate">Invalid email</string>
    <string name="password">Password</string>
    <string name="password_validate">Invalid Password</string>
    <string name="login_error">User not found or password is wrong</string>
    <string name="login_success">Login success</string>
    <string name="logout_success">Logout success</string>
    <string name="register_error">Registration failed, user already exists or email is invalid</string>
    <string name="changeLanguage">Change Language</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="noHaveAccount">Dont Have an Account?</string>
    <string name="register">Register</string>
    <string name="register_success">Registration success</string>
    <string name="name">Name</string>
    <string name="title1">Want consultation,</string>
    <string name="title2">inquire or</string>
    <string name="title3">talk to the vet?</string>
    <string name="title4">"Let's" just try it on the HewanKita!!!</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_tips">Tips</string>
    <string name="title_profile">Profile</string>
    <string name="fill_address">Please select an outlet first</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="consultation">Consultation</string>
    <string name="care">Care</string>
    <string name="hewankita1">Hewan Kita 1, Jakarta Selatan</string>
    <string name="hewankita2">Hewan Kita 2, Tangerang Selatan</string>
    <string name="close">Close</string>
    <string name="choose1">Choose</string>
    <string name="booking_success">Booking Success</string>
    <string name="imageViewProfile">Image Profile</string>
    <string name="emailProfile">anabulmypet@gmail.com</string>
    <string name="petName">Pet Name</string>
    <string name="imagepets">Image Pets</string>
    <string name="my_pet">My Pet</string>
    <string name="ic_arrow">ic_arrow</string>
    <string name="ic_schedule">ic_schedule</string>
    <string name="cek_jadwal">Check Schedule</string>
    <string name="ic_settings">ic_settings</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="informasi">Informasi</string>
    <string name="ic_info">ic_info</string>
    <string name="ic_logout">ic_logout</string>
    <string name="add_your_image">Add Your Image</string>
    <string name="no_hp">Handphone</string>
    <string name="alamat">Address</string>
    <string name="save">Save</string>
    <string name="pet_age">9 month</string>
    <string name="spesies">Species</string>
    <string name="jenis_kelamin">Gender</string>
    <string name="age">Age</string>
    <string name="berat">Weight</string>
    <string name="warna_bulu">Feather Color</string>
    <string name="ciri_lainnya">Other Features</string>
    <string name="optional">optional</string>
    <string name="btnSave">save</string>
    <string name="nama_jadwal">Schedule Name</string>
    <string name="kategori">Category</string>
    <string name="versi_1_0">Version 1.0</string>
    <string name="InformationLogo">Information Page Logo</string>
    <string name="group_capstone">Capstone Project Group C22–013</string>
    <string name="selected_item">Selected category :</string>
    <string name="validation">Data cannot be empty</string>
    <string name="fill_in">please fill in first</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="check_schedule">Check Schedule</string>
    <string name="doctor_schedule">Doctor Schedule</string>
    <string name="care_schedule">Care Schedule</string>
    <string name="grooming_schedule">Grooming Schedule</string>
    <string name="vaccination_schedule">Vaccination Schedule</string>
    <string name="cannot_use_past_time">Cannot use past time</string>
    <string name="no_data">No data at this time</string>
    <string name="booking_failed">"Booking Failed"</string>
    <string name="user">User</string>
    <string name="profile_has_been_updated">Profile has been updated</string>
    <string name="add_pet">Add Pet</string>
    <string name="add_pet_successful">Add Data Successful</string>
    <string name="floating_move_to_edit">Floating Move To Edit</string>
    <string name="hewan_kita">Hewan Kita</string>
    <string name="picture">Picture</string>
    <string name="error_field">All input must be filled</string>

    <string-array name="deskripsi">
        <item>Cara Merawat Hewan Peliharaan dirumah</item>
        <item>Cara memandikan Kucing yang benar dan aman</item>
        <item>Waktu yang tepat dan cara memberi makan kucing yang benar</item>
        <item>Cara memandikan anjing</item>
        <item>Pertolongan pertama saat hewan sakit</item>
        <item>Cara menghitung umur hewan peliharaan</item>
        <item>Waktu terbaik untuk Grooming</item>
        <item>Tips dan alat yang digunakan untuk grooming</item>
        <item>Cara melatih anjing jadi pintar dan penurut</item>
        <item>Tips bawa hewan peliharaan sata mudik atau perjalanan jauh</item>
    </string-array>

    <string-array name="judul">
        <item>Cara Merawat Hewan Peliharaan dirumah</item>
        <item>Cara memandikan Kucing yang benar dan aman</item>
        <item>Waktu yang tepat dan cara memberi makan kucing yang benar</item>
        <item>Cara memandikan anjing</item>
        <item>Pertolongan pertama saat hewan sakit</item>
        <item>Cara menghitung umur hewan peliharaan</item>
        <item>Waktu terbaik untuk Grooming</item>
        <item>Tips dan alat yang digunakan untuk grooming</item>
        <item>Cara melatih anjing jadi pintar dan penurut</item>
        <item>Tips bawa hewan peliharaan sata mudik atau perjalanan jauh</item>
    </string-array>

    <integer-array name="photo">
        <item>@drawable/artikel1</item>
        <item>@drawable/artikel2</item>
        <item>@drawable/artikel3</item>
        <item>@drawable/artikel4</item>
        <item>@drawable/artikel5</item>
        <item>@drawable/artikel6</item>
        <item>@drawable/artikel7</item>
        <item>@drawable/artikel8</item>
        <item>@drawable/artikel9</item>
        <item>@drawable/artikel10</item>
    </integer-array>
</resources>