<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.information.InformationActivity">

    <RelativeLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardviewbackground"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/primary_color"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versi_1_0"
            android:layout_below="@+id/tvAppName"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_below="@+id/tvAppVersion"
            android:contentDescription="@string/InformationLogo"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_capstone"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/primary_color"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>