<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CareActivity">

    <TextView
        android:id="@+id/tvTitleOutlet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outlet"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvOutlet"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        android:padding="14dp"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleOutlet" />

    <TextView
        android:id="@+id/tvTitleCheckIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkIn"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvOutlet"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvCheckIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose"
        android:padding="14dp"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleCheckIn" />

    <TextView
        android:id="@+id/tvTitleCheckOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkOut"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvCheckIn"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvCheckOut"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose"
        android:padding="14dp"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleCheckOut" />

    <TextView
        android:id="@+id/tvTitleTimeOfArrival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeOfArrival"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvCheckOut"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTimeOfArrival"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose"
        android:padding="14dp"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTimeOfArrival"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        android:textColor="@color/secondary_color"
        android:background="@drawable/border_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeOfArrival"/>
</androidx.constraintlayout.widget.ConstraintLayout>