<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color">

    <ImageView
        android:id="@+id/ivDoctor"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="32dp"
        android:background="@drawable/border_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/doctor"/>

    <TextView
        android:id="@+id/tvDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/animalDoctor"
        android:textColor="@color/secondary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivVaccination"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="32dp"
        android:background="@drawable/border_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDoctor"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/vaccination"/>

    <TextView
        android:id="@+id/tvVaccination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/vaccination"
        android:textColor="@color/secondary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDoctor"/>

    <ImageView
        android:id="@+id/ivGrooming"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="32dp"
        android:background="@drawable/border_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivVaccination"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/grooming"/>

    <TextView
        android:id="@+id/tvGrooming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/grooming"
        android:textColor="@color/secondary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvVaccination"/>

    <ImageView
        android:id="@+id/ivCare"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="32dp"
        android:background="@drawable/border_main"
        app:layout_constraintTop_toBottomOf="@id/ivGrooming"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/care"/>

    <TextView
        android:id="@+id/tvCare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/care"
        android:textColor="@color/secondary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGrooming"/>
</androidx.constraintlayout.widget.ConstraintLayout>