<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TambahJadwalActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvNamaJadwal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_jadwal"
            android:textSize="18sp"
            android:textColor="@color/primary_color"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"/>

        <EditText
            android:id="@+id/etNamaJadwal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tvNamaJadwal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:autofillHints="username"
            android:background="@drawable/border"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp"
            android:hint="@string/nama_jadwal"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSpinnerKategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori"
            android:textSize="18sp"
            android:textColor="@color/primary_color"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/etNamaJadwal"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"/>

        <Button
            android:id="@+id/buttonSimpan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/primary_color"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>